# college-dues-off

./: .gitignore  alembic.ini  app.json  babel.config.js  drizzle.config.ts  hash.py  main.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.in  requirements.txt  requirementsclone.txt  tailwind.config.js  tsconfig.json
app/: _layout.tsx  index.tsx  splash.tsx
app/(auth)/: staffLogin.tsx  studentLogin.tsx
app/(auth)/staffLogin/: index.tsx
backend/: .gitignore  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
backend/src/: server.ts
component/: announcements.tsx  faqsDisplay.tsx  header.tsx  homeHeader.tsx  profileHeader.tsx  storyCard.tsx
constants/: subjects.ts
context/: userContext.tsx
controllers/: auth_controller.py  profile_controller.py  schemas.py  staff_controller.py  student_controller.py
db/: database.py  init_db.py  models.py  models_old_v1.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: +not-found.tsx  _layout.tsx  index.tsx  splash.tsx
frontend/component/: subjectInfo.tsx
frontend/constants/: subjects.ts
frontend/context/: userContext.tsx
frontend/utils/: data.ts  types.ts
migrations/: env.py
migrations/versions/: 26ceda8c92eb_initial_schema.py  3b507332d542_update.py  45822bd1ded1_database_update.py
routes/: auth_routes.py  profile_routes.py  staff_routes.py  student_routes.py
src/: server.ts
src/controllers/: auth.controller.ts
src/db_config/: db.ts
src/routes/: student.routes.ts
utils/: api.ts  auth_bearer.py  auth_handler.py  data.ts  helpers.ts  types.ts
(+98 files in other folders)
